added plugins